--- a/block-BHaaba/index.html
+++ b/block-BHaaba/index.html
@@ -1,8 +1,42 @@
-<!-- ### Exercise 2
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header style="display: flex;align-items: center;justify-content: space-between;">
+        <h1> altcampus logo</h1>
+        
+        <nav>
+<a href="#">column1</a>
+<a href="#">column2</a>
 
-1. Create a simple page having a header, main content, and a footer.
 
-2. Inside the header keep the brand name to the left and all the navigation to the right.
 
-3. Inside the main content crate three columns. In each column take one image and a paragraph below the image.
-4. Using float is necessary. -->
+        </nav>
+    </header>
+    
+    <main style="display: flex;">
+        <div>
+            <img src="image2.jpg" alt="image2">
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero sit at, placeat distinctio deserunt voluptatem debitis tempora saepe veniam? Necessitatibus, accusantium, ipsam hic quas repudiandae ullam autem ab quaerat veniam soluta quisquam porro aut obcaecati vel voluptas itaque dolor voluptates, laboriosam reiciendis cumque et aspernatur delectus! Ex, hic! Sapiente, voluptate!</p>
+        </div>
+        <div>
+            <img src="image2.jpg" alt="image2">
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero sit at, placeat distinctio deserunt voluptatem debitis tempora saepe veniam? Necessitatibus, accusantium, ipsam hic quas repudiandae ullam autem ab quaerat veniam soluta quisquam porro aut obcaecati vel voluptas itaque dolor voluptates, laboriosam reiciendis cumque et aspernatur delectus! Ex, hic! Sapiente, voluptate!</p>
+        </div>
+        <div>
+            <img src="image2.jpg" alt="image2">
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero sit at, placeat distinctio deserunt voluptatem debitis tempora saepe veniam? Necessitatibus, accusantium, ipsam hic quas repudiandae ullam autem ab quaerat veniam soluta quisquam porro aut obcaecati vel voluptas itaque dolor voluptates, laboriosam reiciendis cumque et aspernatur delectus! Ex, hic! Sapiente, voluptate!</p>
+        </div>
+
+    </main>
+    <footer></footer>
+</body>
+</html>
