--- a/block-BHaabd/index.html
+++ b/block-BHaabd/index.html
@@ -1,7 +1,35 @@
-<!-- 
-### Create a page according to the layout shown below
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+<main style="display: flex;justify-content: space-between;">
 
-![Positioning Content Exercise 1](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/positioning-content/ex-1.png)
+    <div>
+        <p>column1</p>
+        <p>column2</p>
+        <p>column3</p>
+        <p>column4</p>
+        <p>column5</p>
 
-- Using CSS resets is necessary.
-- Use semantic tags and keep the nesting and indentation proper. -->
+    </div>
+    <div style="margin: auto;max-width: 700px;">
+        <h1>Lorem ipsum dolo?</h1>
+        <img src="image2.jpg" alt="cat">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam eius laboriosam corrupti a incidunt dicta assumenda sed dolorum tenetur provident.       </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam eius laboriosam corrupti a incidunt dicta assumenda sed dolorum tenetur provident.       </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam eius laboriosam corrupti a incidunt dicta assumenda sed dolorum tenetur provident.       </p>
+
+
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+    </div>
+
+</main>    
+</body>
+</html>
